--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,3 +19,8 @@ form .field {
 form .checkbox {
     margin-right:18px;
 }
+
+.subtitlecustom1 {
+    font-weight: bolder;
+    font-size: 25px;
+}
